# flup

./: .gitignore  Cargo.toml  README.md  config.toml  remove.js
src/: db.rs  file.rs  handler.rs  main.rs
static/: script.js  style.css
views/: about.hbs  deletedfiles.hbs  error.hbs  index.hbs  uploaded.hbs  uploads.hbs
